--- a/app/ads.html
+++ b/app/ads.html
@@ -1064,7 +1064,7 @@
                 <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text card__text_mobile">
-                      <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
+                      <p><strong>Контакты:</strong> +7&nbsp;(903)&nbsp;033&nbsp;03&nbsp;03,&ensp;<a class="link-deafult" href="mailto:/contact@omk.ru">contactvaleryvasiley@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal1" data-toggle="modal" data-target="#tabModal1">Читать далее</a>
                     </div>
                   </div>
@@ -1410,7 +1410,7 @@
                 <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text card__text_mobile">
-                      <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
+                      <p><strong>Контакты:</strong> +7&nbsp;(903)&nbsp;033&nbsp;03&nbsp;03,&ensp;<a class="link-deafult" href="mailto:/contact@omk.ru">contactvaleryvasiley@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal2" data-toggle="modal" data-target="#tabModal2">Читать далее</a>
                     </div>
                   </div>
@@ -1756,7 +1756,7 @@
                 <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text card__text_mobile">
-                      <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
+                      <p><strong>Контакты:</strong> +7&nbsp;(903)&nbsp;033&nbsp;03&nbsp;03,&ensp;<a class="link-deafult" href="mailto:/contact@omk.ru">contactvaleryvasiley@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal3" data-toggle="modal" data-target="#tabModal3">Читать далее</a>
                     </div>
                   </div>
@@ -2102,7 +2102,7 @@
                 <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text card__text_mobile">
-                      <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
+                      <p><strong>Контакты:</strong> +7&nbsp;(903)&nbsp;033&nbsp;03&nbsp;03,&ensp;<a class="link-deafult" href="mailto:/contact@omk.ru">contactvaleryvasiley@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal4" data-toggle="modal" data-target="#tabModal4">Читать далее</a>
                     </div>
                   </div>
@@ -2448,7 +2448,7 @@
                 <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text card__text_mobile">
-                      <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
+                      <p><strong>Контакты:</strong> +7&nbsp;(903)&nbsp;033&nbsp;03&nbsp;03,&ensp;<a class="link-deafult" href="mailto:/contact@omk.ru">contactvaleryvasiley@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal5" data-toggle="modal" data-target="#tabModal5">Читать далее</a>
                     </div>
                   </div>
@@ -2794,7 +2794,7 @@
                 <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text card__text_mobile">
-                      <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
+                      <p><strong>Контакты:</strong> +7&nbsp;(903)&nbsp;033&nbsp;03&nbsp;03,&ensp;<a class="link-deafult" href="mailto:/contact@omk.ru">contactvaleryvasiley@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal6" data-toggle="modal" data-target="#tabModal6">Читать далее</a>
                     </div>
                   </div>
@@ -3140,7 +3140,7 @@
                 <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text card__text_mobile">
-                      <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
+                      <p><strong>Контакты:</strong> +7&nbsp;(903)&nbsp;033&nbsp;03&nbsp;03,&ensp;<a class="link-deafult" href="mailto:/contact@omk.ru">contactvaleryvasiley@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal7" data-toggle="modal" data-target="#tabModal7">Читать далее</a>
                     </div>
                   </div>
