add margin modal

--- a/app/ads.html
+++ b/app/ads.html
@@ -1090,7 +1090,7 @@
                       <div class="card margin-bottom-0">
                         <div class="row">
                           <div class="col-sm-3">
-                            <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-01.jpg);"><img src="img/block-img-01.jpg" alt="user-photo"/></div>
+                            <div class="card__imgbox card__imgbox_xs margin-bottom-15" style="background-image: url(img/block-img-01.jpg);"><img src="img/block-img-01.jpg" alt="user-photo"/></div>
                           </div>
                           <div class="col-sm-9">
                             <div class="card__text margin-bottom-30">
@@ -1436,7 +1436,7 @@
                       <div class="card margin-bottom-0">
                         <div class="row">
                           <div class="col-sm-3">
-                            <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-02.jpg);"><img src="img/block-img-02.jpg" alt="user-photo"/></div>
+                            <div class="card__imgbox card__imgbox_xs margin-bottom-15" style="background-image: url(img/block-img-02.jpg);"><img src="img/block-img-02.jpg" alt="user-photo"/></div>
                           </div>
                           <div class="col-sm-9">
                             <div class="card__text margin-bottom-30">
@@ -1782,7 +1782,7 @@
                       <div class="card margin-bottom-0">
                         <div class="row">
                           <div class="col-sm-3">
-                            <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/noimage.png);"><img src="img/noimage.png" alt="user-photo"/></div>
+                            <div class="card__imgbox card__imgbox_xs margin-bottom-15" style="background-image: url(img/noimage.png);"><img src="img/noimage.png" alt="user-photo"/></div>
                           </div>
                           <div class="col-sm-9">
                             <div class="card__text margin-bottom-30">
@@ -2128,7 +2128,7 @@
                       <div class="card margin-bottom-0">
                         <div class="row">
                           <div class="col-sm-3">
-                            <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-03.jpg);"><img src="img/block-img-03.jpg" alt="user-photo"/></div>
+                            <div class="card__imgbox card__imgbox_xs margin-bottom-15" style="background-image: url(img/block-img-03.jpg);"><img src="img/block-img-03.jpg" alt="user-photo"/></div>
                           </div>
                           <div class="col-sm-9">
                             <div class="card__text margin-bottom-30">
@@ -2474,7 +2474,7 @@
                       <div class="card margin-bottom-0">
                         <div class="row">
                           <div class="col-sm-3">
-                            <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-04.jpg);"><img src="img/block-img-04.jpg" alt="user-photo"/></div>
+                            <div class="card__imgbox card__imgbox_xs margin-bottom-15" style="background-image: url(img/block-img-04.jpg);"><img src="img/block-img-04.jpg" alt="user-photo"/></div>
                           </div>
                           <div class="col-sm-9">
                             <div class="card__text margin-bottom-30">
@@ -2820,7 +2820,7 @@
                       <div class="card margin-bottom-0">
                         <div class="row">
                           <div class="col-sm-3">
-                            <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-05.jpg);"><img src="img/block-img-05.jpg" alt="user-photo"/></div>
+                            <div class="card__imgbox card__imgbox_xs margin-bottom-15" style="background-image: url(img/block-img-05.jpg);"><img src="img/block-img-05.jpg" alt="user-photo"/></div>
                           </div>
                           <div class="col-sm-9">
                             <div class="card__text margin-bottom-30">
@@ -3166,7 +3166,7 @@
                       <div class="card margin-bottom-0">
                         <div class="row">
                           <div class="col-sm-3">
-                            <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-06.jpg);"><img src="img/block-img-06.jpg" alt="user-photo"/></div>
+                            <div class="card__imgbox card__imgbox_xs margin-bottom-15" style="background-image: url(img/block-img-06.jpg);"><img src="img/block-img-06.jpg" alt="user-photo"/></div>
                           </div>
                           <div class="col-sm-9">
                             <div class="card__text margin-bottom-30">
