--- a/app/post.html
+++ b/app/post.html
@@ -1132,6 +1132,8 @@
                       <div class="comment__date"><span>12 Декабря 2018, 16:32</span></div>
                       <div class="comment__text">
                         <p>В ходе горячих испытаний оборудования покрытие из УФ-лака было нанесено на гладкие трубы диаметром 426 мм. Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ, включая ремонтные службы, технологов и автоматчиков.</p>
+                        <p>В ходе горячих испытаний оборудования покрытие из УФ-лака было нанесено на гладкие трубы диаметром 426 мм. Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ, включая ремонтные службы, технологов и автоматчиков.</p>
+                        <p>В ходе горячих испытаний оборудования покрытие из УФ-лака было нанесено на гладкие трубы диаметром 426 мм. Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ, включая ремонтные службы, технологов и автоматчиков.</p>
                       </div>
                       <div class="comment__links">
                         <div class="comment__link comment__link_left less hide" data-toggle="collapse" data-target="#commentator_02">
