add galerry slider

--- a/app/gallery.html
+++ b/app/gallery.html
@@ -1203,6 +1203,250 @@
                   </div>
                 </div>
               </div>
+              <!--Галерея - "Слайдер с описанием", тип "Модерн"-->
+              <div class="cards">
+                <div class="card card-full-head_special">
+                  <div class="content-title">
+                    <div class="content-titlebox_dark">
+                      <h2>Галерея - "Слайдер с описанием", тип "Модерн"</h2>
+                    </div>
+                  </div>
+                  <div class="content-title">
+                    <div class="content-titlebox">
+                      <h2>Галерея - "Слайдер с описанием", тип "Модерн"</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="card margin-bottom-15">
+                  <div class="tagbox">
+                    <div class="tag">
+                      <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
+                    </div>
+                    <div class="like-card">
+                      <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
+                      <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                    </div>
+                  </div>
+                </div>
+                <div class="card card-full card-full-slider card-modern">
+                  <div class="card-full-slider-wrap card-wrap card-full-wrap card-modern-slider-wrap">
+                                  <div class="card-full-slider__item card-modern-slider__item">
+                                    <div class="card-modern__imgbox card__imgbox" style="background-image: url(img/img-block-full-04.jpg);"><img src="img/article-img-01.jpg" alt="image">
+                                      <div class="card-modern__inn">
+                                        <div class="row">
+                                          <div class="col-12 col-md-7 offset-md-5">
+                                            <div class="card__info card-modern__info">
+                                              <div class="card-modern__content">
+                                                <div class="content-title">
+                                                  <div class="content-titlebox">
+                                                    <h3>ВМЗ: Новые технологии дадут плоды уже в 2019 для всей ОМК</h3>
+                                                  </div>
+                                                </div>
+                                                <div class="card__text">
+                                                  <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 ...</p>
+                                                </div>
+                                                <div class="card-slider-number"><span></span></div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="card-full-slider__item card-modern-slider__item">
+                                    <div class="card-modern__imgbox card__imgbox" style="background-image: url(img/img-block-full-04.jpg);"><img src="img/article-img-01.jpg" alt="image">
+                                      <div class="card-modern__inn">
+                                        <div class="row">
+                                          <div class="col-12 col-md-7 offset-md-5">
+                                            <div class="card__info card-modern__info">
+                                              <div class="card-modern__content">
+                                                <div class="content-title">
+                                                  <div class="content-titlebox">
+                                                    <h3>ВМЗ: Новые технологии дадут плоды уже в 2019 для всей ОМК</h3>
+                                                  </div>
+                                                </div>
+                                                <div class="card__text">
+                                                  <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 ...</p>
+                                                </div>
+                                                <div class="card-slider-number"><span></span></div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="card-full-slider__item card-modern-slider__item">
+                                    <div class="card-modern__imgbox card__imgbox" style="background-image: url(img/img-block-full-04.jpg);"><img src="img/article-img-01.jpg" alt="image">
+                                      <div class="card-modern__inn">
+                                        <div class="row">
+                                          <div class="col-12 col-md-7 offset-md-5">
+                                            <div class="card__info card-modern__info">
+                                              <div class="card-modern__content">
+                                                <div class="content-title">
+                                                  <div class="content-titlebox">
+                                                    <h3>ВМЗ: Новые технологии дадут плоды уже в 2019 для всей ОМК</h3>
+                                                  </div>
+                                                </div>
+                                                <div class="card__text">
+                                                  <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 ...</p>
+                                                </div>
+                                                <div class="card-slider-number"><span></span></div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="card-full-slider__item card-modern-slider__item">
+                                    <div class="card-modern__imgbox card__imgbox" style="background-image: url(img/img-block-full-04.jpg);"><img src="img/article-img-01.jpg" alt="image">
+                                      <div class="card-modern__inn">
+                                        <div class="row">
+                                          <div class="col-12 col-md-7 offset-md-5">
+                                            <div class="card__info card-modern__info">
+                                              <div class="card-modern__content">
+                                                <div class="content-title">
+                                                  <div class="content-titlebox">
+                                                    <h3>ВМЗ: Новые технологии дадут плоды уже в 2019 для всей ОМК</h3>
+                                                  </div>
+                                                </div>
+                                                <div class="card__text">
+                                                  <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 ...</p>
+                                                </div>
+                                                <div class="card-slider-number"><span></span></div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                  </div>
+                </div>
+              </div>
+              <!--Галерея - "Слайдер с описанием", тип "Модерн"-->
+              <div class="cards">
+                <div class="card card-full-head_special">
+                  <div class="content-title">
+                    <div class="content-titlebox_dark">
+                      <h2>Галерея - "Слайдер с описанием", тип "Модерн"</h2>
+                    </div>
+                  </div>
+                  <div class="content-title">
+                    <div class="content-titlebox">
+                      <h2>Галерея - "Слайдер с описанием", тип "Модерн"</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="card margin-bottom-15">
+                  <div class="tagbox">
+                    <div class="tag">
+                      <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
+                    </div>
+                    <div class="like-card">
+                      <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
+                      <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                    </div>
+                  </div>
+                </div>
+                <div class="card card-full card-full-slider card-modern">
+                  <div class="card-full-slider-wrap card-wrap card-full-wrap card-modern-slider-wrap">
+                                  <div class="card-full-slider__item card-modern-slider__item">
+                                    <div class="card-modern__imgbox card__imgbox" style="background-image: url(img/img-block-full-04.jpg);"><img src="img/article-img-01.jpg" alt="image">
+                                      <div class="card-modern__inn">
+                                        <div class="row">
+                                          <div class="col-12 col-md-7 offset-md-5">
+                                            <div class="card__info card-modern__info">
+                                              <div class="card-modern__content card-modern__content_bottom">
+                                                <div class="content-title">
+                                                  <div class="content-titlebox">
+                                                    <h3>Привязка текста к низу слайдера</h3>
+                                                  </div>
+                                                </div>
+                                                <div class="card__text">
+                                                  <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 ...</p>
+                                                </div>
+                                                <div class="card-slider-number"><span></span></div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="card-full-slider__item card-modern-slider__item">
+                                    <div class="card-modern__imgbox card__imgbox" style="background-image: url(img/img-block-full-04.jpg);"><img src="img/article-img-01.jpg" alt="image">
+                                      <div class="card-modern__inn">
+                                        <div class="row">
+                                          <div class="col-12 col-md-7 offset-md-5">
+                                            <div class="card__info card-modern__info">
+                                              <div class="card-modern__content card-modern__content_bottom">
+                                                <div class="content-title">
+                                                  <div class="content-titlebox">
+                                                    <h3>Привязка текста к низу слайдера</h3>
+                                                  </div>
+                                                </div>
+                                                <div class="card__text">
+                                                  <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 ...</p>
+                                                </div>
+                                                <div class="card-slider-number"><span></span></div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="card-full-slider__item card-modern-slider__item">
+                                    <div class="card-modern__imgbox card__imgbox" style="background-image: url(img/img-block-full-04.jpg);"><img src="img/article-img-01.jpg" alt="image">
+                                      <div class="card-modern__inn">
+                                        <div class="row">
+                                          <div class="col-12 col-md-7 offset-md-5">
+                                            <div class="card__info card-modern__info">
+                                              <div class="card-modern__content card-modern__content_bottom">
+                                                <div class="content-title">
+                                                  <div class="content-titlebox">
+                                                    <h3>Привязка текста к низу слайдера</h3>
+                                                  </div>
+                                                </div>
+                                                <div class="card__text">
+                                                  <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 ...</p>
+                                                </div>
+                                                <div class="card-slider-number"><span></span></div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="card-full-slider__item card-modern-slider__item">
+                                    <div class="card-modern__imgbox card__imgbox" style="background-image: url(img/img-block-full-04.jpg);"><img src="img/article-img-01.jpg" alt="image">
+                                      <div class="card-modern__inn">
+                                        <div class="row">
+                                          <div class="col-12 col-md-7 offset-md-5">
+                                            <div class="card__info card-modern__info">
+                                              <div class="card-modern__content card-modern__content_bottom">
+                                                <div class="content-title">
+                                                  <div class="content-titlebox">
+                                                    <h3>Привязка текста к низу слайдера</h3>
+                                                  </div>
+                                                </div>
+                                                <div class="card__text">
+                                                  <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 ...</p>
+                                                </div>
+                                                <div class="card-slider-number"><span></span></div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                  </div>
+                </div>
+              </div>
               <div class="card margin-bottom-15">
                 <div class="content-title">
                   <div class="content-titlebox content-titlebox_specialtitle">
