--- a/app/stylegide.html
+++ b/app/stylegide.html
@@ -49,6 +49,17 @@
         </div>
         <div class="col-2">
           <div class="card">
+            <div class="box height-65 bg-color-light bg-color-light-2"></div>
+            <div class="card__text text-center h-auto">
+              <p>#F4F5F5</p>
+              <p>.bg-color-light-2</p>
+              <p>.color-light-2</p>
+              <p class="color-light-2">example</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-2">
+          <div class="card">
             <div class="box height-65 bg-color-light bg-color-dark-1"></div>
             <div class="card__text text-center h-auto">
               <p>#EEEFEF</p>
