--- a/app/productions-system.html
+++ b/app/productions-system.html
@@ -961,12 +961,12 @@
                 </div>
               </div>
               <!-- widget-->
-              <div class="widget-box widget_fix-height-240 padding-10 padding-xl-15 bg-color-dark-2 border-default">
+              <div class="widget-box widget_fix-height-240 padding-10 padding-xl-15 bg-color-light-2 border-default">
                 <div class="widget-title">БЛАГОТВОРИТЕЛЬНОСТЬ</div>
                 <div class="widget-imgbox"><img src="img/widget-img-10.jpg" alt="image"></div>
               </div>
               <!-- widget-->
-              <div class="widget-box widget_fix-height-240 padding-10 padding-xl-15 bg-color-dark-2 border-default">
+              <div class="widget-box widget_fix-height-240 padding-10 padding-xl-15 bg-color-light-2 border-default">
                 <div class="widget-title">КОНКУРСЫ</div>
                 <div class="widget-imgbox"><img src="img/widget-img-11.jpg" alt="image">
                   <div class="widget-imgbox__text">
