--- a/app/ads.html
+++ b/app/ads.html
@@ -1036,7 +1036,7 @@
           <div class="col-12 col-md-9">
             <div class="content-group" id="content">
               <div class="card text-right margin-top-md-15 margin-bottom-md-0">
-                <button class="button button-border button-width-142">Дать объявление</button>
+                <button class="button button-ads button-border">Дать объявление</button>
               </div>
               <div class="card margin-bottom-0">
                 <div class="content-title">
